IP setting save function added

--- a/MainController/App.config
+++ b/MainController/App.config
@@ -1,6 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MainController.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="MainController.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <MainController.MySettings>
+            <setting name="kinectFrontIPSetting" serializeAs="String">
+                <value>192.168.0.111</value>
+            </setting>
+            <setting name="kinectBackIPSetting" serializeAs="String">
+                <value>192.168.0.110</value>
+            </setting>
+            <setting name="limboViewerIPSetting" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="imageServerIPSetting" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="limboStandIPSetting" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="iPadIPSetting" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="portSetting" serializeAs="String">
+                <value>8000</value>
+            </setting>
+        </MainController.MySettings>
+        <MainController.Settings>
+            <setting name="dd" serializeAs="String">
+                <value>test</value>
+            </setting>
+        </MainController.Settings>
+    </userSettings>
 </configuration>
