scene button added

--- a/MainController/App.config
+++ b/MainController/App.config
@@ -18,16 +18,16 @@
                 <value>192.168.0.110</value>
             </setting>
             <setting name="limboViewerIPSetting" serializeAs="String">
-                <value />
+                <value>192.168.0.111</value>
             </setting>
             <setting name="imageServerIPSetting" serializeAs="String">
-                <value />
+                <value>192.168.0.114</value>
             </setting>
             <setting name="limboStandIPSetting" serializeAs="String">
-                <value />
+                <value>127.0.0.1</value>
             </setting>
             <setting name="iPadIPSetting" serializeAs="String">
-                <value />
+                <value>127.0.0.1</value>
             </setting>
             <setting name="portSetting" serializeAs="String">
                 <value>8000</value>
