ipad test button added

--- a/MainController/App.config
+++ b/MainController/App.config
@@ -32,6 +32,12 @@
             <setting name="portSetting" serializeAs="String">
                 <value>8000</value>
             </setting>
+            <setting name="iPadMsgAddrSetting" serializeAs="String">
+                <value>/ipad</value>
+            </setting>
+            <setting name="iPadMsgArgSetting" serializeAs="String">
+                <value>1</value>
+            </setting>
         </MainController.MySettings>
         <MainController.Settings>
             <setting name="dd" serializeAs="String">
