picutre taking osc added

--- a/MainController/App.config
+++ b/MainController/App.config
@@ -38,6 +38,9 @@
             <setting name="iPadMsgArgSetting" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="userCountSetting" serializeAs="String">
+                <value>0</value>
+            </setting>
         </MainController.MySettings>
         <MainController.Settings>
             <setting name="dd" serializeAs="String">
