--- a/MainController/MySettings.settings
+++ b/MainController/MySettings.settings
@@ -29,5 +29,8 @@
     <Setting Name="iPadMsgArgSetting" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="userCountSetting" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
